# matrirc

./: .gitignore  Cargo.toml  README.md  TESTING.md
.github/workflows/: ci.yml  release.yml
homebrew/: PUBLISH.md
homebrew/Formula/: matrirc.rb
irssi/: matrirc-media.pl  matrirc.pl.in
src/: bridge.rs  cli.rs  config.rs  daemon.rs  main.rs  matrix.rs  names.rs  proxy.rs
src/irc/: conn.rs  mod.rs  proto.rs
